@@ -51,23 +51,23 @@ errmsg = {};
 missing = setdiff (public_mfile_list, union (indexed, ignored));
 if ~ isempty (missing)
     errmsg = {sprintf('\nThe following public M-file are missing in INDEX:\n')};
-    errmsg = [errmsg cellfun(...
+    errmsg = [errmsg; cellfun(...
         @(s)(sprintf ('!!! %s\n', s)), missing, 'UniformOutput', false)];
 end
 
 ignored = setdiff (ignored, public_mfile_list);
 if ~ isempty (ignored)
-    errmsg = [errmsg {sprintf(['\nThe following M-files are ignored in ' ...
+    errmsg = [errmsg; {sprintf(['\nThe following M-files are ignored in ' ...
         'INDEX but are not in the list of public M-files:\n'])}];
-    errmsg = [errmsg cellfun(...
+    errmsg = [errmsg; cellfun(...
         @(s)(sprintf ('!!! %s\n', s)), ignored, 'UniformOutput', false)];    
 end
 
 indexed = setdiff (indexed, public_mfile_list);
 if ~ isempty (indexed)
-    errmsg = [errmsg {sprintf(['\nThe following M-files are indexed in ' ...
+    errmsg = [errmsg; {sprintf(['\nThe following M-files are indexed in ' ...
         'INDEX but are not in the list of public M-files:\n'])}];
-    errmsg = [errmsg cellfun(...
+    errmsg = [errmsg; cellfun(...
         @(s)(sprintf ('!!! %s\n', s)), indexed, 'UniformOutput', false)];    
 end
 
